Changelog since Version 1.3.2:
==============================

Version 3.0.0b3
    Fixed and upgraded implementation of Barcode Writer In Pure Postscript.
    Fixed TBarcode support.
    Fixed moving multiple items.
    Added Ukrainian localization.

Version 3.0.0b2
    Fixed printing in label editor.
    Fixed printing in barcode generator.
    Fixed displaying contacts in batch assistant's address list widgets.
    Fixed names.

Version 3.0.0b1
    Ported KBarcode to KDE4.
    Renamed KBarcode to KBarcode-kde4 so that a user can have the old KBarcode 
        as well as the new KBarcode-kde4 on one system.
    Also fixed some older bugs.

Version 2.0.7

Version 2.0.6
    Dag Nygren contributed a patch which fixes printing from a CSV file
    Check if files passed for batchprinting from the commandline do exist
    Patch from Chris <chris@ac-drexler.de> fixing problems with SQLite
    Patch from Váradi Zsolt Gyula to fix the long standing issue with
	disappearing objects
	
Version 2.0.5
    Fixed TBarcode2 detection in system check
    Fixed checksum for TBarcode2
    Improved CSV file import (works now with any table and fixed field
    files)
    Added new version of barcode writer in pure postscript
    Supported barcodes are now parsed from barcode writer in pure postscript file
    Fixed address printing
	
Version 2.0.4
    Fixed compilation on KDE < 3.5
    Fixed a database access bug
    Raphael Pinson updated the french translation
    Fixed text alignment in label editor
	
Version 2.0.3
    Fixed adding articles from the SQL table
    Fixed barcode support when only barcode writer in pure postscript is
    available
    Added an action map
    Added the possibility to keep the batch printing window open after printing
	
Version 2.0.2
    Fixed translations in the barcode combo
    Fixed [field0] - [field9]
    Fixed case sensitive barcode encoding in SQL database
	
Version 2.0.1
    Fixed compilation on slackware amd64
    Fixed spec file RHFC4